new section added to html file, small changes in css, and addition of JS file

--- a/sprint-2/styles/main.css
+++ b/sprint-2/styles/main.css
@@ -497,6 +497,33 @@
   }
 }
 
+.main__comment-title {
+  font-family: "Avenir-Bold";
+}
+
+@media screen and (max-width: 425px) {
+  .main__comment-title {
+    margin-left: 16px;
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__comment-title {
+    font-size: 36px;
+    line-height: 44px;
+    margin-left: 32px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__comment-title {
+    font-size: 36px;
+    line-height: 44px;
+  }
+}
+
 .main__footer {
   background-color: #323232;
   color: white;
