--- a/sprint-2/styles/main.scss
+++ b/sprint-2/styles/main.scss
@@ -1,4 +1,9 @@
-// Problems to fix: 5 + 1 *special case
+// Problems to fix: 3 + 1 *special case
+// + @import does not work
+// + mobile version: bio-image, photo gallery and join the convo should align
+
+//imported variables
+// @import url('../variables/master.scss');
 
 // font-face
 @font-face {
@@ -25,7 +30,7 @@
 $font-bold: "Avenir-Bold";
 $font-demi: "Avenir-Demi";
 
-// move the variables to a separate file, master scss file (3/4 [next one in the html file])
+// move the variables to a separate file, master scss file (2/3)
 
 // mobile text size and line height variables
 $header-text-mobile: 24px;
@@ -57,7 +62,7 @@ $labels-line-desk: 20px;
 // media query variables
 
 // change breakpoints if necessary (*/*)
-// from mobile to tablet some elements are causing white space, check that (1/4)
+// from mobile to tablet some elements are causing white space, check that (1/3)
 
 $max-mobile-width: 426px;
 $max-tablet-width: 769px;
@@ -84,9 +89,9 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
 
 // styling
 // the root for all classes is "main"
-
-// margin of body = 0, have to get rid of this, figure out a way to do it without messing up everything else
-// (2/4)
+body {
+    margin: 0;
+}
 
 .main {
     
@@ -181,7 +186,7 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         border-bottom: 2px solid white;
     }
     
-    // height change is visible at times when resolution changes, fix it (4/4)
+    // height change is visible at times when resolution changes, fix it (3/3)
     &__hero {
         background-image: url(../assets/Images/hero-bandsite.jpg);
         background-size: cover;
@@ -221,7 +226,7 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
     }
 
     &__wrap {
-        padding: 32px 16px;
+        padding: 32px;
 
         @include mobile() {
             display: flex;
@@ -231,6 +236,14 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
 
         @include desktop() {
             padding: 32px 142px;
+        }
+    }
+
+    &__info {
+        @include mobile() {
+            // display: flex;
+            // justify-content: center;
+            // flex-wrap: wrap;
         }
     }
 
@@ -256,7 +269,7 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
     &__bio-image {
         @include mobile () {
             width: 288px;
-            height: 145px;
+            height: 162px;
         }
 
         @include tablet() {
@@ -423,6 +436,13 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         }
     }
 
+    // form styles
+    &__form-wrap {
+        @include mobile() {
+            margin-left: 16px;
+        }
+    }
+
     &__comment-title {
         font-family: $font-bold;
 
@@ -443,6 +463,89 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
             line-height: $header-one-line-desk;
         }
     }
+
+    &__form {
+        display: flex;
+    }
+
+    &__form-image {
+        @include mobile() {
+            margin-left: 16px;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+    }
+
+    &__name-comment-holder {
+        @include mobile() {
+            display: flex;
+            flex-direction: column;
+            padding-left: 10px;
+        }
+    }
+
+    &__form-name {
+        @include mobile() {
+            margin-bottom: 20px;
+            width: 224px;
+            border: 1px solid black;
+            border-radius: 4px;
+        }
+    }
+
+    &__form-comment {
+        @include mobile() {
+            width: 224px;
+            border: 1px solid black;
+            border-radius: 4px;
+        }
+    }
+
+    &__form-button {
+        @include mobile() {
+            margin-top: 10px;
+            width: 228px;
+            border: 1px solid black;
+            border-radius: 4px;
+            color: white;
+            background-color: #323232;
+        }
+    }
+
+    // js comment section styling
+    &__new-comments {
+        @include mobile() {
+            margin-top: 32px;
+        }
+    }
+
+    &__comment-container {
+        @include mobile() {
+            display: flex;
+            margin: 24px 16px;
+            border-top: 1px solid #323232;
+            padding-top: 24px;
+        }
+    }
+
+    &__comment {
+        @include mobile() {
+            padding-left: 10px;
+        }
+    }
+
+    &__comment-one-container {
+        @include mobile() {
+            width: 88%;
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+
+
+    // js comment section ending
+
 
     &__footer {
         background-color: #323232;
