--- a/sprint-2/styles/main.scss
+++ b/sprint-2/styles/main.scss
@@ -99,8 +99,8 @@ body {
         background-color: #323232;
 
         @include mobile() {
-        display: flex;
-        flex-direction: column;
+            display: flex;
+            flex-direction: column;
         }
 
         @include tablet() {
@@ -184,6 +184,10 @@ body {
 
     &__bio-border {
         border-bottom: 2px solid white;
+    }
+
+    &__nav-bar-item-opacity {
+        color: grey;
     }
     
     // height change is visible at times when resolution changes, fix it (3/3)
