--- a/sprint-2/styles/shows.css
+++ b/sprint-2/styles/shows.css
@@ -23,13 +23,76 @@
   }
 }
 
+.main__hero-shows {
+  background-image: url(../assets/Images/shows-hero.jpg);
+  background-size: auto 100%;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__hero-shows {
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__hero-shows {
+    height: 670px;
+  }
+}
+
 .main__hero-desc {
   color: white;
 }
 
 @media screen and (max-width: 425px) {
   .main__hero-desc {
-    padding: 10% 5%;
+    padding: 5%;
+    margin-bottom: 0;
+  }
+}
+
+.main__hero-title-shows {
+  color: white;
+  font-family: "Avenir-Bold";
+}
+
+@media screen and (max-width: 425px) {
+  .main__hero-title-shows {
+    font-size: 24px;
+    line-height: 32px;
+    padding: 5%;
+    margin-top: 0;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__hero-title-shows {
+    font-size: 60px;
+    line-height: 68px;
+    padding: 15% 5%;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__hero-title-shows {
+    font-size: 60px;
+    line-height: 68px;
+    padding: 20% 10%;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .main__music {
+    width: 88%;
+    margin-bottom: 30px;
   }
 }
 
@@ -47,7 +110,104 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin: 0 16px 20px;
+    margin: 70px 16px 20px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .main__shows-title {
+    font-size: 24px;
+    font-family: "Avenir-Bold";
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__shows-title {
+    font-size: 36px;
+    font-family: "Avenir-Bold";
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__shows-title {
+    font-size: 36px;
+    font-family: "Avenir-Bold";
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .main__show {
+    border-bottom: 1px solid grey;
+    margin-right: 16px;
+    margin-left: 16px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .main__h-three-font {
+    font-size: 14px;
+    font-family: "Avenir-Demi";
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__h-three-font {
+    font-size: 16px;
+    font-family: "Avenir-Demi";
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__h-three-font {
+    font-size: 16px;
+    font-family: "Avenir-Demi";
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .main__date {
+    font-size: 14px;
+    font-family: "Avenir-Demi";
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__date {
+    font-size: 16px;
+    font-family: "Avenir-Demi";
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__date {
+    font-size: 16px;
+    font-family: "Avenir-Demi";
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .main__p-font {
+    font-size: 13px;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__p-font {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__p-font {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .main__tickets {
+    background-color: #323232;
+    color: white;
+    width: 288px;
   }
 }
 /*# sourceMappingURL=shows.css.map */
