shows tablet and desktop mostly done, some styling left

--- a/sprint-2/styles/main.css
+++ b/sprint-2/styles/main.css
@@ -173,7 +173,7 @@ body {
 
 .main__hero {
   background-image: url(../assets/Images/hero-bandsite.jpg);
-  background-size: auto 100%;
+  background-size: contain;
   background-position: center;
 }
 
