--- a/sprint-2/styles/main.scss
+++ b/sprint-2/styles/main.scss
@@ -193,7 +193,7 @@ body {
     // height change is visible at times when resolution changes, fix it (3/3)
     &__hero {
         background-image: url(../assets/Images/hero-bandsite.jpg);
-        background-size: auto 100%;
+        background-size: contain;
         background-position: center;
 
         @include tablet() {
