--- a/sprint-2/styles/shows.scss
+++ b/sprint-2/styles/shows.scss
@@ -88,6 +88,15 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         }
     }
 
+    &__logo-list-container-shows {
+        @include desktop() {
+            display: flex;
+            align-items: center;
+            height: 80px;
+            padding-bottom: 50px;
+        }
+    }
+
     &__hero-shows {
         background-image: url(../assets/Images/shows-hero.jpg);
         background-size: auto 100%;
@@ -96,7 +105,10 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         flex-direction: column;
 
         @include tablet() {
-            height: 400px;
+            height: 670px;
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
 
         @include desktop() {
@@ -110,6 +122,30 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         @include mobile() {
             padding: 5%;
             margin-bottom: 0;
+        }
+
+        @include tablet() {
+            margin-top: 30px;
+            padding: 0;
+            font-size: $subheader-text-desk;
+            font-family: $font-demi;
+            padding-left: 5%;
+        }
+
+        @include desktop() {
+            margin-top: 160px;
+            margin-bottom: 0;
+            padding-left: 10%;
+            font-size: $subheader-text-desk;
+            font-family: $font-demi;
+        }
+    }
+
+    &__hero-container-shows {
+        @include desktop() {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
     }
 
@@ -125,32 +161,50 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         }
 
         @include tablet() {
-            font-size: $hero-header-text-desk;
+            font-size: 40px;
+            width: 50%;
             line-height: $hero-header-line-desk;
-            padding: 15% 5%;
+            padding: 5%;
         }
 
         @include desktop() {
-            font-size: $hero-header-text-desk;
+            font-size: 40px;
             line-height: $hero-header-line-desk;
-            padding: 20% 10%;
+            padding-left: 10%;
         }
     }
 
     &__music {
         @include mobile() {
-            width: 88%;
+            width: 90%;
+            margin-left: 12px;
             margin-bottom: 30px;
+        }
+
+        @include tablet () {
+            width: 50%;
+            margin-left: 32px;
+        }
+
+        @include desktop() {
+            width: 436px;
+            height: 146px;
+            margin-right: 100px;
         }
     }
 
     &__shows-wrap {
-        display: flex;
-        flex-wrap: wrap;
-
         @include mobile() {
+            display: flex;
+            flex-wrap: wrap;
             flex-direction: column;
             margin: 70px 16px 20px;
+        }
+
+        @include desktop() {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
     }
 
@@ -163,11 +217,27 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         @include tablet() {
             font-size: $header-one-text-desk;
             font-family: $font-bold;
+            margin-left: 20px;
         }
 
         @include desktop() {
             font-size: $header-one-text-desk;
             font-family: $font-bold;
+            margin-left: 100px;
+        }
+    }
+
+    &__category-head-shows {
+        display: flex;
+        justify-content: space-between;
+        margin-left: 24px;
+
+        @include mobile() {
+            display: none;
+        }
+
+        @include desktop() {
+            margin-left: 100px;
         }
     }
 
@@ -176,6 +246,29 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
             border-bottom: 1px solid grey;
             margin-right: 16px;
             margin-left: 16px;
+        }
+
+        @include tablet() {
+            display: flex;
+            justify-content: space-between;
+            margin-left: 24px;
+            border-bottom: 1px solid grey;
+            padding: 20px 0;
+        }
+
+        @include desktop() {
+            display: flex;
+            justify-content: space-between;
+            margin-left: 100px;
+            border-bottom: 1px solid grey;
+            padding: 20px 0;
+            width: 804px;
+        }
+    }
+
+    &__venue {
+        @include tablet {
+            text-align: center;
         }
     }
 
@@ -186,13 +279,11 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         }
 
         @include tablet() {
-            font-size: $subheader-text-desk;
-            font-family: $font-demi;
+            display: none;
         }
 
         @include desktop() {
-            font-size: $subheader-text-desk;
-            font-family: $font-demi;
+            display: none;
         }
     }
 
@@ -228,10 +319,30 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
     }
 
     &__tickets {
+        background-color: #323232;
+        color: white;
+        border-radius: 7px;
+
         @include mobile() {
-            background-color: #323232;
-            color: white;
-            width: 288px;
+            width: 100%;
+            margin-bottom: 16px;
+        }
+
+        @include tablet() {
+            width: 20%;
+            margin-right: 24px;
+        }
+
+        @include desktop() {
+            width: 160px;
+            height: 48px;
+            margin-bottom: 20px;
+        }
+    }
+
+    &__shows-footer {
+        @include tablet() {
+            margin-top: 20px;
         }
     }
 }
