--- a/sprint-2/styles/main.css
+++ b/sprint-2/styles/main.css
@@ -534,6 +534,7 @@ body {
   .main__comment-title {
     font-size: 36px;
     line-height: 44px;
+    margin-left: 143px;
   }
 }
 
@@ -554,19 +555,21 @@ body {
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
   .main__form-image {
-    margin-left: 16px;
-    width: 40px;
-    height: 40px;
+    margin-left: 140px;
+    width: 48px;
+    height: 48px;
     border-radius: 50%;
+    padding-top: 10px;
   }
 }
 
 @media screen and (min-width: 769px) {
   .main__form-image {
-    margin-left: 16px;
-    width: 40px;
-    height: 40px;
+    margin-left: 140px;
+    width: 48px;
+    height: 48px;
     border-radius: 50%;
+    padding-top: 10px;
   }
 }
 
@@ -583,6 +586,32 @@ body {
   }
 }
 
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__name-comment-holder {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-left: 20px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__name-comment-holder {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-left: 20px;
+  }
+}
+
 @media screen and (max-width: 425px) {
   .main__form-name {
     margin-bottom: 20px;
@@ -592,11 +621,53 @@ body {
   }
 }
 
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__form-name {
+    margin-bottom: 24px;
+    padding-left: 16px;
+    width: 460px;
+    height: 48px;
+    border: 2px solid black;
+    border-radius: 4px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__form-name {
+    margin-bottom: 24px;
+    padding-left: 16px;
+    width: 460px;
+    height: 48px;
+    border: 2px solid black;
+    border-radius: 4px;
+  }
+}
+
 @media screen and (max-width: 425px) {
   .main__form-comment {
     width: 224px;
     border: 1px solid black;
     border-radius: 4px;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__form-comment {
+    width: 460px;
+    height: 96px;
+    border: 1px solid black;
+    border-radius: 4px;
+    padding-left: 16px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__form-comment {
+    width: 460px;
+    height: 96px;
+    border: 1px solid black;
+    border-radius: 4px;
+    padding-left: 16px;
   }
 }
 
@@ -611,10 +682,36 @@ body {
   }
 }
 
-@media screen and (max-width: 425px) {
-  .main__new-comments {
-    margin-top: 32px;
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__form-button {
+    margin-top: 24px;
+    width: 160px;
+    height: 48px;
+    border: 1px solid black;
+    border-radius: 4px;
+    color: white;
+    background-color: #323232;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
   }
+}
+
+@media screen and (min-width: 769px) {
+  .main__form-button {
+    margin-top: 24px;
+    width: 160px;
+    height: 48px;
+    border: 1px solid black;
+    border-radius: 4px;
+    color: white;
+    background-color: #323232;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
+}
+
+.main__new-comments {
+  margin-top: 32px;
 }
 
 @media screen and (max-width: 425px) {
@@ -624,6 +721,26 @@ body {
     display: flex;
     margin: 24px 16px;
     border-top: 1px solid #323232;
+    padding-top: 24px;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__comment-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 0;
+    padding-top: 24px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__comment-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 0;
     padding-top: 24px;
   }
 }
@@ -646,10 +763,56 @@ body {
   }
 }
 
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__comment-one-container {
+    width: 88%;
+    padding-left: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    border-top: 1px solid #323232;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__comment-one-container {
+    width: 88%;
+    padding-left: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    border-top: 1px solid #323232;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__comment-comment {
+    padding-left: 20px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__comment-comment {
+    padding-left: 20px;
+  }
+}
+
 .main__footer {
   background-color: #323232;
   color: white;
   padding: 5%;
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__footer {
+    margin-top: 40px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__footer {
+    margin-top: 40px;
+  }
 }
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
