--- a/sprint-2/styles/main.scss
+++ b/sprint-2/styles/main.scss
@@ -464,6 +464,7 @@ body {
         @include desktop() {
             font-size: $header-one-text-desk;
             line-height: $header-one-line-desk;
+            margin-left: 143px;
         }
     }
 
@@ -480,17 +481,19 @@ body {
         }
 
         @include tablet() {
-            margin-left: 16px;
-            width: 40px;
-            height: 40px;
+            margin-left: 140px;
+            width: 48px;
+            height: 48px;
             border-radius: 50%;
+            padding-top: 10px;
         }
 
         @include desktop() {
-            margin-left: 16px;
-            width: 40px;
-            height: 40px;
+            margin-left: 140px;
+            width: 48px;
+            height: 48px;
             border-radius: 50%;
+            padding-top: 10px;
         }
     }
 
@@ -499,6 +502,18 @@ body {
             display: flex;
             flex-direction: column;
             padding-left: 10px;
+        }
+
+        @include tablet() {
+            display: flex;
+            flex-direction: column;
+            padding-left: 20px;
+        }
+
+        @include desktop() {
+            display: flex;
+            flex-direction: column;
+            padding-left: 20px;
         }
     }
 
@@ -509,6 +524,24 @@ body {
             border: 1px solid black;
             border-radius: 4px;
         }
+
+        @include tablet() {
+            margin-bottom: 24px;
+            padding-left: 16px;
+            width: 460px;
+            height: 48px;
+            border: 2px solid black;
+            border-radius: 4px;
+        }
+
+        @include desktop {
+            margin-bottom: 24px;
+            padding-left: 16px;
+            width: 460px;
+            height: 48px;
+            border: 2px solid black;
+            border-radius: 4px;
+        }
     }
 
     &__form-comment {
@@ -516,6 +549,22 @@ body {
             width: 224px;
             border: 1px solid black;
             border-radius: 4px;
+        }
+
+        @include tablet() {
+            width: 460px;
+            height: 96px;
+            border: 1px solid black;
+            border-radius: 4px;
+            padding-left: 16px;
+        }
+
+        @include desktop() {
+            width: 460px;
+            height: 96px;
+            border: 1px solid black;
+            border-radius: 4px;
+            padding-left: 16px;
         }
     }
 
@@ -528,13 +577,33 @@ body {
             color: white;
             background-color: #323232;
         }
+        
+        @include tablet() {
+            margin-top: 24px;
+            width: 160px;
+            height: 48px;
+            border: 1px solid black;
+            border-radius: 4px;
+            color: white;
+            background-color: #323232;
+            align-self: flex-end;
+        }
+
+        @include desktop() {
+            margin-top: 24px;
+            width: 160px;
+            height: 48px;
+            border: 1px solid black;
+            border-radius: 4px;
+            color: white;
+            background-color: #323232;
+            align-self: flex-end;
+        }
     }
 
     // js comment section
     &__new-comments {
-        @include mobile() {
-            margin-top: 32px;
-        }
+        margin-top: 32px;
     }
 
     &__comment-container {
@@ -542,6 +611,18 @@ body {
             display: flex;
             margin: 24px 16px;
             border-top: 1px solid #323232;
+            padding-top: 24px;
+        }
+        
+        @include tablet() {
+            display: flex;
+            margin-left: 0;
+            padding-top: 24px;
+        }
+
+        @include desktop() {
+            display: flex;
+            margin-left: 0;
             padding-top: 24px;
         }
     }
@@ -558,13 +639,44 @@ body {
             display: flex;
             justify-content: space-between;
         }
+
+        @include tablet() {
+            width: 88%;
+            padding-left: 20px;
+            display: flex;
+            border-top: 1px solid #323232;
+        }
+
+        @include desktop() {
+            width: 88%;
+            padding-left: 20px;
+            display: flex;
+            border-top: 1px solid #323232;
+        }
     }
 
-    
+    &__comment-comment {
+        @include tablet() {
+            padding-left: 20px;
+        }
+
+        @include desktop() {
+            padding-left: 20px;
+        }
+    }
+
     &__footer {
         background-color: #323232;
         color: white;
         padding: 5%;
+
+        @include tablet() {
+            margin-top: 40px;
+        }
+
+        @include desktop() {
+            margin-top: 40px;
+        }
     }
 
     &__footer-first-section {
