--- a/sprint-2/styles/main.scss
+++ b/sprint-2/styles/main.scss
@@ -1,7 +1,3 @@
-// Problems to fix: 3 + 1 *special case
-// + @import does not work
-// + mobile version: bio-image, photo gallery and join the convo should align
-
 //imported variables
 // @import url('../variables/master.scss');
 
@@ -29,8 +25,6 @@
 // font variables
 $font-bold: "Avenir-Bold";
 $font-demi: "Avenir-Demi";
-
-// move the variables to a separate file, master scss file (2/3)
 
 // mobile text size and line height variables
 $header-text-mobile: 24px;
@@ -60,10 +54,6 @@ $labels-text-desk: 12px;
 $labels-line-desk: 20px;
 
 // media query variables
-
-// change breakpoints if necessary (*/*)
-// from mobile to tablet some elements are causing white space, check that (1/3)
-
 $max-mobile-width: 426px;
 $max-tablet-width: 769px;
 $desktop-width: "screen and (min-width: #{$max-tablet-width})";
@@ -190,7 +180,6 @@ body {
         color: grey;
     }
     
-    // height change is visible at times when resolution changes, fix it (3/3)
     &__hero {
         background-image: url(../assets/Images/hero-bandsite.jpg);
         background-size: contain;
@@ -470,6 +459,10 @@ body {
 
     &__form {
         display: flex;
+
+        @include desktop() {
+            margin-left: 90px;
+        }
     }
 
     &__form-image {
