created the for loop, removed text decoration from bio and shows

--- a/sprint-3/styles/main.css
+++ b/sprint-3/styles/main.css
@@ -167,6 +167,10 @@ body {
   border-bottom: 2px solid white;
 }
 
+.main__no-underline {
+  text-decoration: none;
+}
+
 .main__nav-bar-item-opacity {
   color: grey;
 }
