--- a/sprint-3/styles/main.scss
+++ b/sprint-3/styles/main.scss
@@ -176,6 +176,10 @@ body {
         border-bottom: 2px solid white;
     }
 
+    &__no-underline {
+        text-decoration: none;
+    }
+
     &__nav-bar-item-opacity {
         color: grey;
     }
