--- a/sprint-3/styles/main.css
+++ b/sprint-3/styles/main.css
@@ -796,6 +796,18 @@ body {
 }
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__comment-date {
+    padding-left: 10%;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__comment-date {
+    padding-left: 10%;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__comment-comment {
     padding-left: 20px;
   }
